--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,8 @@ dependencies:
   charts_flutter: ^0.12.0  # For bar graph
   fl_chart: ^0.64.0
   table_calendar: ^3.0.1
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  numberpicker: ^2.1.2
   
 
 dev_dependencies:
