--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   firebase_core: ^2.24.2
   font_awesome_flutter: ^10.6.0
   image_picker: ^1.0.5
+  provider: ^6.1.1
+  shared_preferences: ^2.2.2
+  http: ^1.1.0
+  url_launcher: ^6.2.2
   
 
 dev_dependencies:
