--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   shared_preferences: ^2.2.2
   http: ^1.1.0
   url_launcher: ^6.2.2
+  firebase_auth: ^4.15.3
+  cloud_firestore: ^4.13.6
   
 
 dev_dependencies:
