--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   url_launcher: ^6.2.2
   firebase_auth: ^4.15.3
   cloud_firestore: ^4.13.6
+  flutter_map: ^6.1.0
+  geocoding: ^2.1.1
+  google_maps_place_picker_mb: ^3.1.2
   
 
 dev_dependencies:
