--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_fonts: ^6.1.0
-  charts_flutter: ^0.12.0  # For bar graph
-  fl_chart: ^0.64.0
   table_calendar: ^3.0.1
   cupertino_icons: ^1.0.2
   numberpicker: ^2.1.2
@@ -41,14 +38,11 @@ dependencies:
   image_picker: ^1.0.5
   provider: ^6.1.1
   shared_preferences: ^2.2.2
-  http: ^1.1.0
-  url_launcher: ^6.2.2
   firebase_auth: ^4.15.3
   cloud_firestore: ^4.13.6
-  flutter_map: ^6.1.0
-  geocoding: ^2.1.1
-  google_maps_place_picker_mb: ^3.1.2
-  
+  url_launcher: ^6.2.2
+  webview_flutter: ^3.0.0
+
 
 dev_dependencies:
   flutter_test:
