--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
    - assets/icon/logo.png
    - assets/gif/loading.gif
    - assets/map.jpg
+   - assets/map_dark.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
