new theme design

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  table_calendar: ^3.0.1
+  table_calendar: ^3.0.9
   cupertino_icons: ^1.0.2
   numberpicker: ^2.1.2
   firebase_core: ^2.24.2
@@ -41,7 +41,7 @@ dependencies:
   firebase_auth: ^4.15.3
   cloud_firestore: ^4.13.6
   url_launcher: ^6.2.2
-  webview_flutter: ^3.0.0
+  syncfusion_flutter_calendar: ^24.1.47
 
 
 dev_dependencies:
