--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,13 +25,14 @@ if (flutterVersionName == null) {
 android {
     namespace "com.example.organiser"
     compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
+  
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -49,6 +50,7 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
