--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: Organiser
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.5 <4.0.0'
+  sdk: ">=3.1.5 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -40,8 +40,10 @@ dependencies:
   firebase_auth: ^4.15.3
   cloud_firestore: ^4.13.6
   url_launcher: ^6.2.2
+  email_validator: ^2.1.17
+  smooth_page_indicator: ^1.1.0
+  dartz: ^0.10.1
   # syncfusion_flutter_calendar: ^24.1.47
-
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +54,7 @@ flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/icon/logo.png"
-  
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -65,7 +67,6 @@ flutter_launcher_icons:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -73,10 +74,18 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/icon/logo.png
-   - assets/gif/loading.gif
-   - assets/map.jpg
-   - assets/map_dark.jpg
+    - assets/icon/logo.png
+    - assets/gif/loading.gif
+    - assets/gif/meal.png
+    - assets/gif/community.png
+    - assets/gif/analysis.png
+    - assets/images/bg.jpeg
+    - assets/images/bg_decorate.webp
+    - assets/icon/google_signin.png
+    - assets/icon/ios_signin.png
+    - assets/icon/microsoft.png
+    - assets/map.jpg
+    - assets/map_dark.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
