--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   dartz: ^0.10.1
   firebase_storage: ^11.6.9
+  fl_chart: ^0.66.2
   # syncfusion_flutter_calendar: ^24.1.47
 
 dev_dependencies:
